--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --env-file=.env --watch --loader ts-node/esm src/index.ts"
+    "dev": "node --env-file=.env --watch --loader ts-node/esm src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +16,6 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.43.4",
     "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1"
   },
